--- a/painel-suporte-ti/index.html
+++ b/painel-suporte-ti/index.html
@@ -2,11 +2,15 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Painel Suporte TI</title>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+
+  <!-- TOPO -->
   <header class="topbar">
     <div class="brand">Suporte TI</div>
     <div>
@@ -15,30 +19,83 @@
     </div>
   </header>
 
+  <!-- CONTEÚDO -->
   <main class="container">
-    <section id="loginView" class="card">
-      <h2>Entrar</h2>
+
+    <!-- LOGIN -->
+    <section id="loginView" class="card login-card">
+
+      <!-- ÍCONE / LOGO -->
+      <div class="login-logo">
+        🛠️
+      </div>
+
+      <h2>Suporte TI</h2>
+      <p class="muted">Acesse o painel de controle</p>
+
       <form id="loginForm">
-        <input id="email" type="email" placeholder="E-mail" required />
-        <input id="password" type="password" placeholder="Senha" required />
-        <button class="btn">Entrar</button>
+        <input
+          id="email"
+          type="email"
+          placeholder="E-mail"
+          required
+        />
+
+        <input
+          id="password"
+          type="password"
+          placeholder="Senha"
+          required
+        />
+
+        <button class="btn" type="submit">
+          Entrar
+        </button>
       </form>
-      <button id="btnCreateUser" class="btn secondary">Criar usuário</button>
-      <p id="loginMsg"></p>
+
+      <button
+        id="btnCreateUser"
+        class="btn secondary"
+        style="margin-top:12px"
+      >
+        Criar usuário
+      </button>
+
+      <p id="loginMsg" class="muted small"></p>
     </section>
 
+    <!-- DASHBOARD -->
     <section id="appView" class="hidden">
+
       <h2>Dashboard</h2>
+
       <div class="grid">
-        <div class="card">Ativos: <strong id="kpiAtivos">0</strong></div>
-        <div class="card">Usuários: <strong id="kpiUsuarios">0</strong></div>
-        <div class="card">Vencimentos: <strong id="kpiVenc">0</strong></div>
+
+        <div class="card">
+          <div class="muted">Ativos</div>
+          <strong id="kpiAtivos">0</strong>
+        </div>
+
+        <div class="card">
+          <div class="muted">Usuários</div>
+          <strong id="kpiUsuarios">0</strong>
+        </div>
+
+        <div class="card">
+          <div class="muted">Vencimentos</div>
+          <strong id="kpiVenc">0</strong>
+        </div>
+
       </div>
+
     </section>
+
   </main>
 
+  <!-- SCRIPTS -->
   <script type="module" src="js/firebase.js"></script>
   <script type="module" src="js/auth.js"></script>
   <script type="module" src="js/app.js"></script>
+
 </body>
 </html>
