--- a/index.html
+++ b/index.html
@@ -89,12 +89,50 @@
       </p>
 
       <p class="muted small">
-        Tecnologias utilizadas:<br>
-        • HTML, CSS e JavaScript<br>
-        • Firebase Authentication<br>
-        • Firestore Database<br>
-        • GitHub Pages
-      </p>
+  <strong>Desenvolvedor:</strong><br>
+  Kleber Sanchez
+</p>
+
+<p class="muted small">
+  <strong>Contato:</strong><br>
+
+  📱
+  <a
+    href="https://wa.me/5516994136309"
+    target="_blank"
+    class="contact-link"
+  >
+    WhatsApp: (16) 99413-6309
+  </a>
+  <br>
+
+  ✉️
+  <a
+    href="mailto:suporte.ti@manutexcnc.com.br"
+    class="contact-link"
+  >
+    suporte.ti@manutexcnc.com.br
+  </a>
+  <br>
+
+  ✉️
+  <a
+    href="mailto:kleber@sanchezeti.br"
+    class="contact-link"
+  >
+    kleber@sanchezeti.br
+  </a>
+</p>
+
+<hr style="border:0;border-top:1px solid #1e293b;margin:12px 0">
+
+<p class="muted small">
+  <strong>Tecnologias utilizadas:</strong><br>
+  • HTML, CSS e JavaScript<br>
+  • Firebase Authentication<br>
+  • Firestore Database<br>
+  • GitHub Pages
+</p>
 
       <button id="btnCloseAbout" class="btn">Fechar</button>
     </div>
@@ -107,3 +145,4 @@
 
 </body>
 </html>
+
